--- a/hunter-net/html/hunter.css
+++ b/hunter-net/html/hunter.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("images/68thStreetpart2.jpeg");
+	background-image: url("68thStreetpart2.jpeg");
 	background-size: cover;
 }
 #login {    
@@ -49,7 +49,7 @@ footer {
     right:5%;
 }
 nav{
-	background-image:url("images/headerbackground.png");
+	background-image:url("headerbackground.png");
 	display: flex;
 	align-content: center;
 	height: 100px;
@@ -65,7 +65,7 @@ span{
 }
 .navbar2{
 	color: lightgrey;
-	background-image:url("images/divider.png");
+	background-image:url("divider.png");
 	display: flex;
 	align-content: center;
 	/*padding: 10px;*/
